styles.css
/* ... */
.map-wrapper {
  position: relative;
  width: 100%;
  padding-bottom: 568px;
  height: 0;
  overflow: hidden;
}

.map-wrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
  filter: grayscale(100%);
}

.contact-container {
  position: relative;
}

.sign-up-wrapper {
  position: absolute;
  top: -92px;
  width: 100%;
  height: 184px;
  padding: 51px 109px;
  display: flex;
  flex-direction: row;
  gap: 257px;
  background-color: var(--accent);
  background-image: url(./assets/img/newsletter.webp);
  background-repeat: no-repeat;
  background-size: auto;
  background-position: top 40px left 270px;
}

.sign-up-cta {
  width: 403px;
  font-family: "Jost", sans-serif;
  font-size: 32px;
  font-weight: 600;
  line-height: 1.313;
  color: var(--bg-color);
  text-transform: capitalize;
}

.sign-up-form {
  position: relative;
  margin-top: 10px;
}

.sign-up-input {
  padding-left: 10px;
  width: 417px;
  height: 45px;
  background-color: transparent;
  border: none;
  border-bottom: 1px solid var(--bg-color);
  color: var(--bg-color);
}

.sign-up-input::placeholder {
  font-size: 14px;
  color: rgba(255, 255, 255, 0.5);
}

.sign-up-input:focus {
  outline: none;
  border-bottom: 1px solid var(--bg-color);
}

.sign-up-button {
  position: absolute;
  top: 0;
  right: 0;
  width: 38px;
  height: 31px;
  background-color: var(--bg-color);
  fill: var(--accent);
  border: none;
  cursor: pointer;
}

.sign-up-arrow {
  transition: transform var(--transition);
}

.sign-up-button:hover .sign-up-arrow {
  transform: scale(1.3);
}

.footer-lower {
  padding-top: 232px;
  display: flex;
  gap: 0;
}

.footer-lower > div:nth-child(1) {
  width: 407px;
  margin-right: 150px;
}
.footer-lower > div:nth-child(2) {
  width: 200px;
  margin-right: 20px;
}
.footer-lower > div:nth-child(3) {
  width: 310px;
  margin-right: 20px;
}

.footer-lower > div:nth-child(4) {
  width: 195px;
}

.footer-logo {
  padding: 0;
}

.footer-logo-text {
  color: var(--footer-light);
}

.footer-text {
  width: 400px;
  margin-top: 12px;
  color: var(--footer-light);
}

.footer-available {
  margin-top: 36px;
  font-family: "Jost", sans-serif;
  font-weight: 600;
  text-transform: capitalize;
  color: var(--bg-color);
}

.footer-hours {
  margin-top: 6px;
  color: var(--accent);
}

.footer-header {
  margin-bottom: 24px;
  font-family: "Jost", sans-serif;
  font-weight: 600;
  color: var(--bg-color);
}

.footer-list {
  display: flex;
  flex-direction: column;
  gap: 16px;
  color: var(--footer-light);
}

.footer-list > li:hover {
  color: var(--accent);
}

.footer-rights {
  height: 70px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #000000;
  font-family: "DM Sans", sans-serif;
  text-transform: capitalize;
  color: var(--footer-light);
}

.footer-rights-span {
  color: var(--bg-color);
}

/* --------- MODAL --------- */

.modal {
  display: none;
  position: fixed;
  z-index: 1000;
  inset: 0;
  background: rgba(0,0,0,0.6);
  justify-content: center;
  align-items: center;
}

.modal-content {
  position: relative;
  background: white;
  padding: 3rem;
  border-radius: 4px;
  min-width: 300px;
}

.modal.show {
  display: flex;
}

.close-icon {
  position: absolute;
  top: 20px;
  right: 20px;
  fill: var(--dark);
  cursor: pointer;
}

.close-button {
  position: absolute;
  top: 1rem;
  right: 1rem;
  cursor: pointer;
}

.modal-subscribe-title {
  margin-bottom: 14px;
  font-family: "Jost", sans-serif;
  font-size: 24px;
  font-weight: 600;
  line-height: 1.417;
  color: var(--dark);
}

.modal-subscribe-wrapper {
  margin-top: 8px;
  margin-bottom: 8px;
  display: flex;
  flex-direction: row;
  gap: 6px;
  justify-content: start;
  align-items: center;
}

.modal-subscribe-text {
  font-size: 18px;
}

.modal-subscribe-span {
  margin-bottom: 30px;
  font-size: 18px;
  font-style: italic;
  color: var(--accent);
}

.modal-subscribe-button {
  margin: 0 auto;
}

.modal-content.modal-blog {
  position: relative;
  padding: 4rem 6rem;
  width: 1700px;
  max-width: 85vw;
  max-height: 78vh;
}

.modal-blog-article-date {
  position: absolute;
  padding: 8px 13px 8px 12px;
  top: 4rem;
  right: 6rem;
  width: 73px;
  height: 68px;
  color: var(--bg-color);
  text-align: center;
  background-image: url(./assets/img/date.png);
  background-size: contain;
  background-position: 0 0;
  background-repeat: no-repeat;
}

.blog-article-content {
  margin-top: 30px;
  margin-bottom: 50px;
  display: flex;
  flex-direction: row;
  gap: 70px;
  justify-content: space-between;
  align-items: start;
}

.blog-article-content-text {
  max-height: 56vh;
  overflow-y: auto;
}

.modal-blog-article-pic {
  margin-top: 7px;
  width: auto;
  height: auto;
  object-fit: contain;
  display: block;
}

.modal-blog-article-paragraph {
  font-family: "Jost", sans-serif;
  font-size: 17px;
  font-weight: 600;
  margin-bottom: 20px;
}

.blog-article-text {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.blog-article-text > p {
  text-align: justify;
  text-indent: 2em;
}

.modal-blog-button {
  display: block;
  margin-left: auto; 
}

.modal-services {
  padding: 3rem 3rem;
  width: 1150px;
  height: 95vh;
}

.modal-services-list {
  margin-bottom: 40px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 40px;
  justify-content: center;
  align-items: center;
  max-height: 76vh;
  overflow-y: auto;
}

.modal-services-item {
  position: relative;
  height: 374px;
  overflow: hidden;
  cursor: pointer;
}

.modal-services-img {
  object-fit: cover;
  display: block;
}

.modal-services-item::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(to bottom, rgba(5, 0, 0, 0) 0%, rgba(14, 14, 14, 0.8) 100%);
  z-index: 1;
}

.modal-services-content {
  position: absolute;
  top: 120px;
  padding: 20px;
  z-index: 10;
}
/* ... */

